--- a/templates/tenantinformationEdit.html
+++ b/templates/tenantinformationEdit.html
@@ -1,11 +1,11 @@
-{% extends 'base.html'%}
+{% extends 'editbase.html'%}
   {% block content %}
     <h2> Edit Private Tenant Information </h2>
     <table id=datatable>
       <thead>
         <th>TenantID</th>
-        <th>SSN</th>
-        <th>CCN</th>
+        <th>Social Security Number</th>
+        <th>Credit Card Number</th>
       </thead>
       <tbody>
         <tr id="editrow">
@@ -16,71 +16,11 @@
       </tbody>
     </table>
     <button onclick="makeRow()"> Submit </button>
-    <script>
-      let tenantIds = {{tenants | safe}}
-      let current = {{current | safe}}
-
-      function init(){
-        const edit_row = document.getElementById("editrow")
-        let i = 0
-        for (let cell of edit_row.cells) {
-          if (cell.className !== "dropcell"){
-            cell.innerText = current[i]
-          }
-          else {
-            document.getElementById("tenants").value = current[i]
-          }
-          i += 1
-        }
-      }
-
-      function makeRow(){
-        const row = document.getElementById("editrow")
-        let i = 0
-        let values = []
-        for (let cell of row.cells) {
-          if (cell.className === "dropcell" || cell.className === "datecell"){
-            values.push(cell.childNodes[1].value)
-          }
-          else {
-            if (cell.innerText == "") {
-              values.push("null")
-            }
-            else {
-              values.push(cell.innerText)
-            }
-          }
-          i += 1
-        }
-        sendToDatabase(values)
-      }
-
-      async function sendToDatabase(values) {
-        resp = await fetch("/tenantinformation", {
-          method:"PUT",
-          headers:{'Content-Type': 'application/json' },
-          body: JSON.stringify({values})
-        })
-        .then((resp) => {
-          location.href = resp.url
-        })
-      }
-
-      function makeDropdown(list, id){
-        dropdown = document.getElementById(id)
-        for (let row of list) {
-          let text = ""
-          for (let cell of row) {
-            text = text + cell + " "
-          }
-          drop = document.createElement("option")
-          drop.setAttribute("value", row[0])
-          drop.innerText = text
-          dropdown.appendChild(drop)
-        }
-      }
-
-      makeDropdown(tenantIds, "tenants")
-      init()
-    </script>
+  {% endblock %}
+  {% block script %}
+    let tenantIds = {{tenants | safe}}
+    let current = {{current | safe}}
+    const tablename = "tenantinformation"
+    makeDropdown(tenantIds, "tenants")
+    init()
   {% endblock %}
