--- a/templates/maintenanceEdit.html
+++ b/templates/maintenanceEdit.html
@@ -1,4 +1,4 @@
-{% extends 'base.html'%}
+{% extends 'editbase.html'%}
   {% block content %}
     <h2> Edit Maintenance Request </h2>
     <table id=datatable>
@@ -22,73 +22,14 @@
       </tbody>
     </table>
     <button onclick="makeRow()"> Submit </button>
-    <script>
+  {% endblock %}
+  {% block script %}
+
     let current = {{current | safe}}
     let tenantIds = {{tenants | safe}}
     let unitIds = {{units | safe }}
-
-    function makeDropdown(list, id, nullable){
-      dropdown = document.getElementById(id)
-      for (let row of list) {
-        let text = ""
-        for (let cell of row) {
-          text = text + cell + " "
-        }
-        drop = document.createElement("option")
-        drop.setAttribute("value", row[0])
-        drop.innerText = text
-        dropdown.appendChild(drop)
-      }
-      if (nullable === 1){
-        drop = document.createElement("option")
-        drop.setAttribute("value", "NULL")
-        drop.innerText = "None"
-        dropdown.appendChild(drop)
-      }
-    }
-
-    function init(){
-      const edit_row = document.getElementById("editrow")
-      let i = 0
-      for (let cell of edit_row.cells) {
-        if (cell.className === "dropcell" || cell.className === "datecell"){
-          cell.childNodes[1].value = current[i]
-        }
-        else {
-          cell.innerText = current[i]
-        }
-        i += 1
-      }
-    }
-
-    function makeRow(){
-      const row = document.getElementById("editrow")
-      let i = 0
-      let values = []
-      for (let cell of row.cells) {
-        if (cell.className === "dropcell" || cell.className === "datecell"){
-          values.push(cell.childNodes[1].value)
-        }
-        else {values.push(cell.innerText)}
-        i += 1
-      }
-      sendToDatabase(values)
-    }
-
-    async function sendToDatabase(values) {
-      resp = await fetch("/maintenance", {
-        method:"PUT",
-        headers:{'Content-Type': 'application/json' },
-        body: JSON.stringify({values})
-      })
-      .then((resp) => {
-        location.href = resp.url
-      })
-    }
-
+    const tablename = "maintenance"
     makeDropdown(tenantIds, "tenants", 1)
     makeDropdown(unitIds, "units", 0)
     init()
-
-    </script>
   {% endblock %}
