--- a/templates/paymentsEdit.html
+++ b/templates/paymentsEdit.html
@@ -1,4 +1,4 @@
-{% extends 'base.html'%}
+{% extends 'editbase.html'%}
   {% block content %}
     <h2> Edit Past Payment Information </h2>
     <table id=datatable>
@@ -20,79 +20,13 @@
       </tbody>
     </table>
     <button onclick="makeRow()"> Submit </button>
-    <script>
-      let tenantIds = {{tenants | safe}}
-      let unitIds = {{units | safe}}
-      let current = {{current | safe}}
-
-      function init(){
-        const edit_row = document.getElementById("editrow")
-        let i = 0
-        for (let cell of edit_row.cells) {
-          if (cell.className === "dropcell" || cell.className === "datecell"){
-            cell.childNodes[1].value = current[i]
-          }
-          else {
-            cell.innerText = current[i]
-          }
-          i += 1
-        }
-      }
-
-      function makeDropdown(list, id, nullable){
-        dropdown = document.getElementById(id)
-        for (let row of list) {
-          let text = ""
-          for (let cell of row) {
-            text = text + cell + " "
-          }
-          drop = document.createElement("option")
-          drop.setAttribute("value", row[0])
-          drop.innerText = text
-          dropdown.appendChild(drop)
-        }
-        if (nullable === 1){
-          drop = document.createElement("option")
-          drop.setAttribute("value", "NULL")
-          drop.innerText = "None"
-          dropdown.appendChild(drop)
-        }
-      }
-
-      function makeRow(){
-        const row = document.getElementById("editrow")
-        let i = 0
-        let values = []
-        for (let cell of row.cells) {
-          if (cell.className === "dropcell" || cell.className === "datecell"){
-            values.push(cell.childNodes[1].value)
-          }
-          else {
-            if (cell.innerText == "") {
-              values.push("NULL")
-            }
-            else {
-              values.push(cell.innerText)
-            }
-          }
-          i += 1
-        }
-        sendToDatabase(values)
-      }
-
-      async function sendToDatabase(values) {
-        resp = await fetch("/payments", {
-          method:"PUT",
-          headers:{'Content-Type': 'application/json' },
-          body: JSON.stringify({values})
-        })
-        .then((resp) => {
-          location.href = resp.url
-        })
-      }
-
-      makeDropdown(unitIds, "units", 1)
-      makeDropdown(tenantIds, "tenants", 0)
-      init()
-    </script>
+  {% endblock %}
+  {% block script %}
+    const tablename = "payments"
+    let tenantIds = {{tenants | safe}}
+    let unitIds = {{units | safe}}
+    let current = {{current | safe}}
+    makeDropdown(unitIds, "units", 1)
+    makeDropdown(tenantIds, "tenants", 0)
+    init()
   {% endblock %}
