--- a/templates/buildingsEdit.html
+++ b/templates/buildingsEdit.html
@@ -11,7 +11,7 @@
         <tr id=editrow>
           <td></td>
           <td contenteditable="true"></td>
-          <td contenteditable="true"></td>
+          <td class="inputcell"> <input type="number" class="input" step=".01" min="0" /> </td>
         </tr>
       </tbody>
     </table>
