--- a/templates/buildingsNew.html
+++ b/templates/buildingsNew.html
@@ -9,7 +9,7 @@
       <tbody>
         <tr id="newrow">
           <td contenteditable="true"></td>
-          <td contenteditable="true"></td>
+          <td class="inputcell"> <input type="number" class="input" step=".01" min="0" /> </td>
         </tr>
       </tbody>
     </table>
