--- a/templates/editbase.html
+++ b/templates/editbase.html
@@ -49,7 +49,7 @@
           const edit_row = document.getElementById("editrow")
           let i = 0
           for (let cell of edit_row.cells) {
-            if (cell.className === "dropcell" || cell.className === "datecell"){
+            if (cell.className === "inputcell"){
               cell.childNodes[1].value = current[i]
             }
             else {cell.innerText = current[i]}
@@ -61,8 +61,11 @@
           dropdown = document.getElementById(id)
           for (let row of list) {
             let text = ""
+            let i = 0
             for (let cell of row) {
-              text = text + cell + " "
+              if (i === 0) {text = text + cell + " - "}
+              else {text = text + cell + " "}
+              i += 1
             }
             drop = document.createElement("option")
             drop.setAttribute("value", row[0])
@@ -82,7 +85,7 @@
           let i = 0
           let values = []
           for (let cell of row.cells) {
-            if (cell.className === "dropcell" || cell.className === "datecell"){
+            if (cell.className === "inputcell"){
               values.push(cell.childNodes[1].value)
             }
             else {
