--- a/templates/maintenance.html
+++ b/templates/maintenance.html
@@ -6,9 +6,9 @@
     <p> Filter by request date </p>
     <div class="inputrow">
       <label>Start Date:</label>
-      <input type="date" id="start_date" value="">
+      <input type="date" class="date" id="start_date" value="">
       <label>End Date:</label>
-      <input type="date" id="end_date" value="">
+      <input type="date" class="date" id="end_date" value="">
     </div>
     <div class="inputrow">
       <button type="button" name="button" onclick="filter()">Filter</button>
