--- a/templates/tenantinformationNew.html
+++ b/templates/tenantinformationNew.html
@@ -9,7 +9,7 @@
       </thead>
       <tbody>
         <tr id="newrow">
-          <td class="dropcell"> <select name="tenants" class="dropdown" id="tenants" /> </td>
+          <td class="inputcell"> <select name="tenants" class="input" id="tenants" /> </td>
           <td contenteditable="true"></td>
           <td contenteditable="true"></td>
         </tr>
