--- a/templates/tenantsNew.html
+++ b/templates/tenantsNew.html
@@ -13,9 +13,9 @@
         <tr id="newrow">
           <td contenteditable="true"></td>
           <td contenteditable="true"></td>
-          <td contenteditable="true"></td>
-          <td contenteditable="true"></td>
-          <td contenteditable="true"></td>
+          <td class="inputcell"> <input type="number" class="input" id="Age" step="1" min="0" /> </td>
+          <td class="inputcell"> <input type="number" class="input" id="PhoneNumber" step="1" min="0" /> </td>
+          <td class="inputcell"> <input type="number" class="input" id="dollaramount"  step=".01" min="0" /> </td>
         </tr>
       </tbody>
     </table>
