--- a/templates/unitsNew.html
+++ b/templates/unitsNew.html
@@ -13,11 +13,11 @@
       <tbody>
         <tr id="newrow">
           <td contenteditable="true"></td>
+          <td class="inputcell"> <input type="number" class="input" step=".01" min="0" /> </td>
           <td contenteditable="true"></td>
           <td contenteditable="true"></td>
-          <td contenteditable="true"></td>
-          <td class="dropcell"> <select name="buildings" class="dropdown" id="buildings" /> </td>
-          <td class="dropcell"> <select name="buildings" class="dropdown" id="types" /> </td>
+          <td class="inputcell"> <select name="buildings" class="input" id="buildings" /> </td>
+          <td class="inputcell"> <select name="buildings" class="input" id="types" /> </td>
         </tr>
       </tbody>
     </table>
