--- a/templates/maintenanceNew.html
+++ b/templates/maintenanceNew.html
@@ -11,9 +11,9 @@
       </thead>
       <tbody>
         <tr id="newrow">
-          <td class="dropcell"> <select name="units" class="dropdown" id="units" /> </td>
-          <td class="dropcell"> <select name="tenants" class="dropdown" id="tenants" /> </td>
-          <td class="datecell"> <input type="date" id="requestdate" class="datepicker"/> </td>
+          <td class="inputcell"> <select name="units" class="input" id="units" /> </td>
+          <td class="inputcell"> <select name="tenants" class="input" id="tenants" /> </td>
+          <td class="inputcell"> <input type="date" class="input"/> </td>
           <td contenteditable="true"></td>
           <td contenteditable="true"></td>
         </tr>
