--- a/templates/paymentsEdit.html
+++ b/templates/paymentsEdit.html
@@ -12,10 +12,10 @@
       <tbody>
         <tr id="editrow">
           <td> </td>
-          <td class="datecell"> <input type="date" id="paymentdate" class="datepicker"/> </td>
-          <td contenteditable="true"></td>
-          <td class="dropcell"> <select name="units" class="dropdown" id="units" /> </td>
-          <td class="dropcell"> <select name="tenants" class="dropdown" id="tenants" /> </td>
+          <td class="inputcell"> <input type="date"class="input"/> </td>
+          <td class="inputcell"> <input type="number"class="input" step=".01" min="0" /> </td>
+          <td class="inputcell"> <select name="units" class="input" id="units" /> </td>
+          <td class="inputcell"> <select name="tenants" class="input" id="tenants" /> </td>
         </tr>
       </tbody>
     </table>
