--- a/templates/paymentsNew.html
+++ b/templates/paymentsNew.html
@@ -1,4 +1,4 @@
-{% extends 'base.html'%}
+{% extends 'newbase.html'%}
   {% block content %}
     <h2> Add New Payment </h2>
     <table id=datatable>
@@ -10,64 +10,19 @@
       </thead>
       <tbody>
         <tr id="newrow">
-          <td class="datecell"> <input type="date" id="paymentdate" class="datepicker"/> </td>
-          <td contenteditable="true"></td>
-          <td class="dropcell"> <select name="units" class="dropdown" id="units" /> </td>
-          <td class="dropcell"> <select name="tenants" class="dropdown" id="tenants" /> </td>
+          <td class="inputcell"> <input type="date" class="input" id="paymentdate"/> </td>
+          <td class="inputcell"> <input type="number" id="input" class="dollar" step=".01" min="0" /> </td>
+          <td class="inputcell"> <select name="units" class="input" id="units" /> </td>
+          <td class="inputcell"> <select name="tenants" class="input" id="tenants" /> </td>
         </tr>
       </tbody>
     </table>
     <button onclick="addRow()"> Add Row </button>
-    <script>
+  {% endblock %}
+  {% block script %}
       let tenantIds = {{tenants | safe}}
       let unitIds = {{units | safe}}
-
-      function makeDropdown(list, id, nullable=0){
-        dropdown = document.getElementById(id)
-        for (let row of list) {
-          let text = ""
-          for (let cell of row) {
-            text = text + cell + " "
-          }
-          drop = document.createElement("option")
-          drop.setAttribute("value", row[0])
-          drop.innerText = text
-          dropdown.appendChild(drop)
-        }
-        if (nullable === 1){
-          drop = document.createElement("option")
-          drop.setAttribute("value", "NULL")
-          drop.innerText = "None"
-          dropdown.appendChild(drop)
-        }
-      }
-
-      function addRow(){
-        const row = document.getElementById("newrow")
-        let i = 0
-        let values = []
-        for (let cell of row.cells) {
-          if (cell.className === "dropcell" || cell.className === "datecell"){
-            values.push(cell.childNodes[1].value)
-          }
-          else {values.push(cell.innerText)}
-          i += 1
-        }
-        addToDatabase(values)
-      }
-
-      async function addToDatabase(values) {
-        resp = await fetch("/payments", {
-          method:"POST",
-          headers:{'Content-Type': 'application/json' },
-          body: JSON.stringify({values})
-        })
-        .then((resp) => {
-          location.href = resp.url
-        })
-      }
-
+      const tablename = "payments"
       makeDropdown(unitIds, "units", 1)
       makeDropdown(tenantIds, "tenants", 0)
-    </script>
   {% endblock %}
