--- a/templates/rentedunitsEdit.html
+++ b/templates/rentedunitsEdit.html
@@ -11,9 +11,9 @@
       <tbody>
         <tr id="editrow">
           <td> </td>
-          <td class="dropcell"> <select name="units" class="dropdown" id="units" /> </td>
-          <td class="dropcell"> <select name="tenants" class="dropdown" id="tenants" /> </td>
-          <td class="datecell"> <input type="date" id="start" class="datepicker"/> </td>
+          <td class="inputcell"> <select name="units" class="input" id="units" /> </td>
+          <td class="inputcell"> <select name="tenants" class="input" id="tenants" /> </td>
+          <td class="inputcell"> <input type="date" class="input"/> </td>
         </tr>
       </tbody>
     </table>
