--- a/templates/maintenanceNew.html
+++ b/templates/maintenanceNew.html
@@ -14,7 +14,7 @@
           <td class="inputcell"> <select name="units" class="input" id="units" /> </td>
           <td class="inputcell"> <select name="tenants" class="input" id="tenants" /> </td>
           <td class="inputcell"> <input type="date" class="input"/> </td>
-          <td contenteditable="true"></td>
+          <td class="inputcell"> <input type="number"class="input" step="1" min="0" max="1" /> </td>
           <td contenteditable="true"></td>
         </tr>
       </tbody>
